--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       Click on a point to view information about that circuit.
       </div>
       <div id="mapPopup">
-        <h3 id="circuitTitle">CIRCUIT INFO:</h3>
+        <h3 class="popupTitle">CIRCUIT INFO:</h3>
         <text id="circuitName"></text>
         <br>
         <text id="circuitLocation"></text>
@@ -31,12 +31,25 @@
     <svg id="map" height="900" width="900"></svg>
   </div>
   <svg id="barChart" height="500" width="900"></svg>
-  <svg id="lineChart" height="500" width="900"></svg>
+  <div id="lineChartArea">
+    <div id="lineText">How have lap times changed per race? Check out previous stats from the <text id="lineBlank">_____</text> race. Click on a circuit on the map to view times. <br><br> Here, we see the fastest lap times from that race for a certain year. Lap times are affected by a number of factors: tire type, fuel level, overall car build, track temperature, weather conditions, and other factors.</div>
+    <svg id="lineChart" height="500" width="900"></svg>
+  </div>
   <div id="scatterArea">
     <div id="scatterAnnotations">
       <div id="scatterText">Does length of career correlate with success in F1? Yes, but not necessarily. A few notable drivers such as Lewis Hamilton, Alain Prost, and Ayrton Senna have scored big in their careers, despite none of them having been driving the longest. </div>
 
-      <div id="driverYearStats">placeholder for popup for driver stats on point rollover/click</div>
+      <div id="driverYearStats">
+        <h3 class="popupTitle">DRIVER INFO:</h3>
+        <text>Driver:</text>
+        <text id="driverName"></text>
+        <br>
+        <text>Career length:</text>
+        <text id="driverYears"></text>
+        <br>
+        <text>Win count:</text>
+        <text id="driverWins"></text>
+      </div>
     </div>
     <svg id="scatter" height="500" width="900"></svg>
   </div>
@@ -259,6 +272,7 @@
                                .on("click", function (event, d) {
                                   d3.select(this);
                                   // console.log(this);
+                                  document.getElementById("lineBlank").textContent = `${d.name}`;
                                   lapTimeLine(d)
                                   populateCircuitNote(d);
                                });
@@ -315,10 +329,26 @@
                       .attr("index", d => d.driverRef)
                       .attr("r", "4px")
                       .on("mouseover", function (event, d) {
-                        console.log(d.driverRef);
+                        d3.select(this)
+                          .style("stroke", "white")
+                          .style("stroke-width", "1px")
+                       })
+                      .on("mouseout", function (event, d) {
+                        d3.select(this)
+                          .style("stroke", "none")
+                          .style("stroke-width", "0px")
+                      })
+                      .on("click", function (event, d) {
+                        d3.select(this);
+                        populateDriverNote(d);
                       })
                       .style("fill", "red"); 
 
+      function populateDriverNote (driverObject) {
+        document.getElementById("driverName").textContent = `${driverObject.driverRef}`;
+        document.getElementById("driverYears").textContent = `${driverObject.years} years`;
+        document.getElementById("driverWins").textContent = `${driverObject.wins}`;
+      }
 
 
     };
