--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>A Guide To F1</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="https://d3js.org/topojson.v3.min.js"></script>
+  <link rel="icon" type="image/x-icon" href="/images/f1.png">
 
   <link rel="stylesheet" type="text/css" href="styles/site.css">
 </head>
