--- a/index.html
+++ b/index.html
@@ -86,16 +86,54 @@
       .attr("transform", "translate(" + barMargins.left + "," + barMargins.top + ")")
       .attr("class", "barChartBackground");
 
-    const lineChart = d3.select("svg#lineChart");
+      const lineChart = d3.select("svg#lineChart");
     const lineHeight = lineChart.attr("height");
     const lineWidth = lineChart.attr("width");
-    const lineMargins = { top: 10, right: 20, bottom: 30, left: 50 };
+    const lineMargins = {top: 10, right: 20, bottom: 30, left: 50};
     const lineGraphHeight = lineHeight - lineMargins.top - lineMargins.bottom
     const lineGraphWidth = lineWidth - lineMargins.right - lineMargins.left
-    let lineAnnotations = lineChart.append("g").attr("id", "line-annotations");
+    let lineAnnotations = lineChart.append("g").attr("id","line-annotations");
     let lineChartArea = lineChart.append("g")
-      .attr("transform", "translate(" + lineMargins.left + 50 + "," + lineMargins.top + ")")
-      .attr("class", "lineChartBackground");
+                  .attr("transform","translate("+lineMargins.left+","+lineMargins.top+")")
+                  .attr("class", "lineChartBackground");
+
+    let xScaleLine = d3.scaleLinear().range([0, lineGraphWidth]);
+    let yScaleLine = d3.scaleLinear().range([lineGraphHeight, 0]); 
+
+    let leftAxisLine = d3.axisLeft(yScaleLine)
+                         .tickFormat("");
+    let leftGridlinesLine= d3.axisLeft(yScaleLine)
+                          .tickSize(-lineGraphWidth-10)
+                          .tickFormat(function(d) {
+                                return d3.timeFormat('%M min %S sec')(d)
+                            })
+
+    lineChartArea.append("g")
+          .attr("class", "yAxisLine y axis")
+          .attr("transform",`translate(${lineMargins.left},${lineMargins.top})`)
+          .call(leftAxisLine)
+
+    lineChartArea.append("g")
+          .attr("class", "yGridLine y gridlines")
+          .attr("transform",`translate(${lineMargins.left},${lineMargins.top})`)
+          .call(leftGridlinesLine);
+
+    
+    let bottomAxisLine = d3.axisBottom(xScaleLine)
+                        .tickFormat('');
+    let bottomGridlinesLine = d3.axisBottom(xScaleLine)
+                          .tickSize(-lineGraphHeight)
+                          .tickFormat(d3.format("d"))
+
+    lineChartArea.append("g")
+            .attr('class', 'xAxisLine x axis') 
+            .attr('transform',`translate(${lineMargins.left},${lineGraphHeight+lineMargins.top})`)
+            .call(bottomAxisLine);
+    lineChartArea.append("g")
+            .attr('class', 'xGridLine x gridlines') 
+            .attr('transform',`translate(${lineMargins.left},${lineGraphHeight+lineMargins.top})`)
+            .call(bottomGridlinesLine);
+
 
     const scatter = d3.select("svg#scatter");
     const scatterHeight = scatter.attr("height");
@@ -143,6 +181,7 @@
       const fastestLaps = await d3.csv("races_fastest_times.csv", d3.autoType);
       console.log("fastest laps in race", fastestLaps);
 
+      generateLineChart([])
       racesNcircuits = {}
       races.forEach(d => {
         cId = d.circuitId
@@ -186,6 +225,7 @@
 
 
       function generateLineChart(dictYearLapTime) {
+        const transitionTime = Object.keys(dictYearLapTime).length == 0 ? 0 : 3000
         console.log(dictYearLapTime)
         dataDict = []
         const toMilli = (min, sec) => (min * 60 + sec) * 1000;
@@ -204,57 +244,44 @@
         });
 
         let yearsExtent = d3.extent(keys)
-        let timeExtent = d3.extent(values)
+      let timeExtent = d3.extent(values)
 
-        let xScale = d3.scaleLinear().domain([yearsExtent[0], Number(yearsExtent[1]) + 1]).range([0, lineGraphWidth]);
-        let yScale = d3.scaleLinear().domain([timeExtent[0], timeExtent[1] + 1000]).range([lineGraphHeight, 0]);
+      xScaleLine.domain([yearsExtent[0], Number(yearsExtent[1])+1]);
+      yScaleLine.domain([timeExtent[0], timeExtent[1] + 1000]);
 
-        let leftAxis = d3.axisLeft(yScale)
-          .tickFormat("");
-        let leftGridlines = d3.axisLeft(yScale)
-          .tickSize(-lineGraphWidth - 10)
-          .tickFormat(function (d) {
-            return d3.timeFormat('%M min %S sec')(d)
-          })
+      lineChartArea.selectAll(".xAxisLine").transition()
+                    .duration(transitionTime)
+                    .call(bottomAxisLine);
+      lineChartArea.selectAll(".xGridLine").transition()
+                    .duration(transitionTime)
+                    .call(bottomGridlinesLine);             
+     
+      lineChartArea.selectAll(".yAxisLine").transition()
+                    .duration(transitionTime)
+                    .call(leftAxisLine);
+      lineChartArea.selectAll(".yGridLine").transition()
+                    .duration(transitionTime)
+                    .call(leftGridlinesLine); 
 
-        lineChartArea.append("g")
-          .attr("class", "y axis")
-          .attr("transform", `translate(${lineMargins.left},${lineMargins.top})`)
-          .call(leftAxis)
+      var lineGen = d3.line()
+              .x( d => xScaleLine(Number(d)) )
+              .y( d => yScaleLine(Number(dataDict[d]) ))
+              .curve(d3.curveMonotoneX); 
 
-        lineChartArea.append("g")
-          .attr("class", "y gridlines")
-          .attr("transform", `translate(${lineMargins.left},${lineMargins.top})`)
-          .call(leftGridlines);
+      const line = lineChartArea.selectAll(".lineSpeed")
+          .data([Object.keys(dataDict)], function(d){ return d });
 
+      line
+      .join("path")
+      .attr("class","lineSpeed")
+      .attr("transform", `translate(${lineMargins.left})`)
+      .transition()
+      .duration(transitionTime)
+      .attr("d", lineGen)
+        .attr("fill", "none")
+        .attr("stroke", "red")
+        .attr("stroke-width", 3);
 
-        let bottomAxis = d3.axisBottom(xScale)
-          .tickFormat('');
-        let bottomGridlines = d3.axisBottom(xScale)
-          .tickSize(-lineGraphHeight)
-          .tickFormat(d3.format("d"))
-
-        lineChartArea.append("g")
-          .attr('class', 'x gridlines')
-          .attr('transform', `translate(${lineMargins.left},${lineGraphHeight + lineMargins.top})`)
-          .call(bottomAxis);
-        lineChartArea.append("g")
-          .attr('class', 'x gridlines')
-          .attr('transform', `translate(${lineMargins.left},${lineGraphHeight + lineMargins.top})`)
-          .call(bottomGridlines);
-
-        var lineGen = d3.line()
-          .x(d => xScale(Number(d)) + 50)
-          .y(d => yScale(Number(dataDict[d])))
-          .curve(d3.curveMonotoneX);
-
-        lineChartArea.append("path")
-          .datum(Object.keys(dataDict))
-          .attr("class", "line")
-          .attr("fill", "none")
-          .attr("stroke", "red")
-          .attr("stroke-width", 3)
-          .attr("d", lineGen);
       }
 
       function lapTimeLine(circuitData) {
@@ -274,6 +301,9 @@
         })
         if (raceLapTimes.length > 0) {
           generateLineChart(raceLapTimes)
+        }
+        else{
+          generateLineChart([])
         }
       }
 
